--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -25,7 +25,7 @@
   <br><br>
   
   <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr class="bg-dark">
+    <h1 class="text-center text-danger" style="font-weight:900">CONVENER</h1><hr class="bg-dark">
     <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
            <h1 style="font-size:20px;font-weight:900">Dr. A. R. Gayathri</h1><hr class="bg-light">
@@ -151,7 +151,7 @@
 
    <br><br><br>
     <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENERS</h1><hr class="bg-dark">
+      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENER</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:20px;font-weight:900">Ms. R. Sivanagini </h1><hr class="bg-light">
