--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -179,6 +179,12 @@
 
          </div>
         <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
+             <h1 style="font-size:20px;font-weight:900">Ms. B. Varsha </h1><hr class="bg-light">
+             <h3 style="font-size:18px"> R&D Engineer</h3>
+             <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
+
+         </div>
+        <div class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:20px;font-weight:900">Mr. P. Ajithmurugan </h1><hr class="bg-light">
              <h3 style="font-size:18px"> R&D Engineer</h3>
              <h3 style="font-size:18px">AB Technologies , Nagercoil. </h3>
