--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -29,15 +29,15 @@
   <div class=" container" style="padding:40px">
 
     <center>
-    <h4 >Click below to download the Template </h4><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
+    <h4 class="text-danger font-weight-bold">Click below to download the Template </h4><br><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
   </center>
   </div>
 
   
 <div class="container  " style="padding:40px">
   <center>
-  <h1 class="text-center text-danger" style="font-weight:900;">SUBMISSION FORM</h1><br><br>
-    <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSdRzBP86MGJtzKRZ08957MgGpFzO5XMhtYQkmSU-BKabkqfTw/viewform?embedded=true" width="640" height="1591" frameborder="0" marginheight="0" marginwidth="0">Loading…</iframe>
+  <h1 class="text-center text-danger" style="font-weight:900;">SUBMISSION FORM</h1><br>
+    <button class="btn btn-lg btn-primary"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">Click here</a></button>
 </center>
 </div>
 
