--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #e9ecef;">
   <div class="mt-3">
-    <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+    <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
   </div>
    {% include 'navbar.html' %}
 
@@ -26,10 +26,10 @@
   ,#0083b0);">
     <img src="static/images/murali.JPG" width="200px" style="border-radius:10px">
     <br><br>
-    <h1 style="font-size:20px;font-weight:900">Murali Matcha</h1><hr class="bg-light">
-    <h3 style="font-size:18px">Associate Professor </h3>
-    <h3 style="font-size:18px">Department of Electrical Engineering</h3>
-    <h3 style="font-size:18px">Medicaps University</h3>
+    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Murali Matcha</h1><hr class="bg-light">
+    <h3 style="font-size:18px">Associate Professor, </h3>
+    <h3 style="font-size:18px">Department of Electrical Engineering,</h3>
+    <h3 style="font-size:18px">Medicaps University,</h3>
     <h3 style="font-size:18px">Indore, Madhya Pradesh, India.</h3>
   </div>
   </center>
@@ -39,11 +39,11 @@
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
        
-        <h1 style="font-size:20px;font-weight:900">Dr. J.A.SMITHA</h1><hr class="bg-light">
-        <h3 style="font-size:18px">HOD and Professor </h3>
-        <h3 style="font-size:18px">Department of Computer Science and Engineering</h3>
-        <h3 style="font-size:18px">Sri Sairam College of Engineering</h3>
-        <h3 style="font-size:18px">Anekal, Bangalure</h3>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. J.A.SMITHA</h1><hr class="bg-light">
+        <h3 style="font-size:18px">HOD and Professor, </h3>
+        <h3 style="font-size:18px">Department of Computer Science and Engineering,</h3>
+        <h3 style="font-size:18px">Sri Sairam College of Engineering,</h3>
+        <h3 style="font-size:18px">Anekal, Bangalure.</h3>
       </div>
       </center>
 
