--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -9,34 +9,35 @@
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
-        <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+        <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
       
         
         {% include 'navbar.html' %}
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="font-weight:900;" class="text-white text-center">PAPER SUBMISSION</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center">PAPER | <span class="text-danger">SUBMISSION</span></h1></div>
         </div>
 <br><br><br>
 <div  class="jumbotron container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px;">
   <h1 class="text-center text-danger" style="font-weight:900;">PAPER SUBMISSION GUIDELINES</h1><hr class="bg-dark">
   
 <center>
-<p style="text-align:start;font-size:18px;line-height:200%;padding:25px">&#9733;Papers should be 8 pages and follow the ICMTEM-24 conference paper template. <br>&#9733;The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings. <br>&#9733; ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
+<p style="text-align:start;font-size:19px;line-height:200%;padding:25px">&#9733; Papers should be 8 pages and follow the ICMTEM-24 conference paper template. <br>&#9733; The purpose of a conference template is to provide a consistent format for papers appearing in the conference proceedings. <br>&#9733; ICMTEM-24 strongly encourages use of the conference manuscript templates provided below.</p>
 </center>
 </div>
 
-  <div class=" container" style="padding:40px">
+  <div class=" container  bg-light p-5 shadow p-3 mb-5  rounded" style="padding:40px">
 
     <center>
-    <h4 class="text-danger font-weight-bold">Click below to download the Template </h4><br><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
+      
+    <h3 class="text-danger font-weight-bold">Click below to download the Template </h3><br><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE NEW.docx ">DOWNLOAD NOW</a></button>
   </center>
   </div>
 
   
-<div class="container  " style="padding:40px">
+<div class="container  bg-light p-5 shadow p-3 mb-5  rounded " style="padding:40px">
   <center>
-  <h1 class="text-center text-danger" style="font-weight:900;">SUBMISSION FORM</h1><br>
+  <h2 class="text-center text-danger" style="font-weight:900;">SUBMISSION FORM</h2><br>
     <button class="btn btn-lg btn-primary"><a class="text-white" href="https://forms.gle/FSHm7ZZS8WDqxgTa7" target="_blank">Click here</a></button>
 </center>
 </div>
