--- a/templates/chiefguests.html
+++ b/templates/chiefguests.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
-        <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+        <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
       </div>
 
 
@@ -28,8 +28,8 @@
       <img class="img-fluid" src="static/images/Joshi.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
       <h1 style="font-size:20px;font-weight:900">Dr. Joshi Manohar</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean & HOD </h3>
-      <h3 style="font-size:18px">Presidency University</h3>
+      <h3 style="font-size:18px">Dean & HOD, </h3>
+      <h3 style="font-size:18px">Presidency University,</h3>
       <h3 style="font-size:18px">Bangalore.</h3>
      
     </div>
@@ -43,9 +43,9 @@
       <img class="img-fluid" src="static/images/Lekshmi.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
       <h1 style="font-size:20px;font-weight:900">Dr. Lekshmi</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean </h3>
-      <h3 style="font-size:18px">R&D Department</h3>
-      <h3 style="font-size:18px">Associate Professor</h3>
+      <h3 style="font-size:18px">Dean, </h3>
+      <h3 style="font-size:18px">R&D Department,</h3>
+      <h3 style="font-size:18px">Associate Professor,</h3>
 
       <h3 style="font-size:18px">AMET University.</h3>
 
@@ -60,9 +60,9 @@
       <img class="img-fluid" src="static/images/Dr.B.Vaikundaselvan.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
       <h1 style="font-size:20px;font-weight:900">Dr. Vaikunda Selvan</h1><hr class="bg-light">
-      <h3 style="font-size:18px">Dean </h3>
-      <h3 style="font-size:18px">R&D Department</h3>
-      <h3 style="font-size:18px">Nehru Group of Institutions</h3>
+      <h3 style="font-size:18px">Dean,</h3>
+      <h3 style="font-size:18px">R&D Department,</h3>
+      <h3 style="font-size:18px">Nehru Group of Institutions,</h3>
 
       <h3 style="font-size:18px">Coimbatore.</h3>
 
@@ -77,8 +77,8 @@
       <img class="img-fluid" src="static/images/Dr. D. SAM HARISON.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
       <h1 style="font-size:20px;font-weight:900">Dr. Sam Harison</h1><hr class="bg-light">
-      <h3 style="font-size:18px">HOD/EEE </h3>
-      <h3 style="font-size:18px">Rohini College of Engineering</h3>
+      <h3 style="font-size:18px">HOD/EEE, </h3>
+      <h3 style="font-size:18px">Rohini College of Engineering,</h3>
       
 
       <h3 style="font-size:18px">Nagercoil.</h3>
