--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -6,10 +6,13 @@
     <title>COMMITTEE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
+
+
 </head>
 <body style="background-color: #e9ecef;">
   <div class="mt-3">
-    <marquee ><h5><span style="color:red">Dates to Remember:</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+    <marquee ><h5><span style="color:red">Dates to Remember :</span>  Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
   </div>
    {% include 'navbar.html' %}
 
@@ -26,10 +29,10 @@
   ,#0083b0);">
     <img src="static/images/thomas.JPG" width="30%" height="300px" class="img-fluid" style="border-radius:10px">
     <br><br>
-    <h1 style="font-size:20px;font-weight:900">Dr. T. J. Thomas Thangam</h1><hr class="bg-light">
-    <h3 style="font-size:18px">Department of Process Engineering </h3>
-    <h3 style="font-size:18px">International Maritime  College Oman</h3>
-    <h3 style="font-size:18px">National University of Science and Technology</h3>
+    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. T. J. Thomas Thangam</h1><hr class="bg-light">
+    <h3 style="font-size:18px">Department of Process Engineering, </h3>
+    <h3 style="font-size:18px">International Maritime  College Oman,</h3>
+    <h3 style="font-size:18px">National University of Science and Technology,</h3>
     <h3 style="font-size:18px">Sohar, Sultanate of Oman.</h3>
   </div>
   </center>
@@ -39,10 +42,10 @@
       ,#0083b0);">
         <img src="static/images/anand.JPG" width="30%" style="border-radius:10px;">
         <br><br>
-        <h1 style="font-size:20px;font-weight:900">Anandh Sam Chandra Bose</h1><hr class="bg-light">
-        <h3 style="font-size:18px">Assistant Professor</h3>
-        <h3 style="font-size:18px">Faculty of Applied Medical Science</h3>
-        <h3 style="font-size:18px">AlMaarefa University</h3>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Anandh Sam Chandra Bose</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Assistant Professor,</h3>
+        <h3 style="font-size:18px">Faculty of Applied Medical Science,</h3>
+        <h3 style="font-size:18px">AlMaarefa University,</h3>
         <h3 style="font-size:18px">Kingdom of Saudi Arabia.</h3>
       </div>
       </center>
@@ -82,9 +85,13 @@
   </div>
 
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.min.js" integrity="sha384-+sLIOodYLS7CIrQpBjl+C7nPvqq+FbNUBDunl/OZv93DB7Ln/533i8e/mZXLi/P+" crossorigin="anonymous"></script>
+  
 </html>
