--- a/templates/sccommittee.html
+++ b/templates/sccommittee.html
@@ -9,7 +9,7 @@
 </head>
 <body style="background-color: #e9ecef;">
   <div class="mt-3">
-    <marquee ><h5><span style="color:red">Dates to Remember:</span>Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
+    <marquee ><h5><span style="color:red">Dates to Remember :</span> Full Paper Submission: 26th March 2024 | Registration Deadline: 30th March 2024 | Camera ready paper submission: 31st March 2024</h5></marquee>
   </div>
    {% include 'navbar.html' %}
 
@@ -26,10 +26,10 @@
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
         ,#0083b0);">
 
-          <h1 style="font-size:2vw;font-weight:900">Dr. Shekaina Justin</h1><hr class="bg-light">
-          <h3 style="font-size:1.5vw">Associate Professor </h3>
-          <h3 style="font-size:1.5vw">Princess Nourah bint Abdulrahman University</h3>
-          <h3 style="font-size:1.5vw">Saudi Arabia</h3>
+          <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Shekaina Justin</h1><hr class="bg-light">
+          <h3 style="font-size:1.5vw">Associate Professor, </h3>
+          <h3 style="font-size:1.5vw">Princess Nourah bint Abdulrahman University,</h3>
+          <h3 style="font-size:1.5vw">Saudi Arabia.</h3>
           
         </div>
         </center>
@@ -40,9 +40,9 @@
     <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
-        <h1 style="font-size:2vw;font-weight:900">Dr. Anteneh Yeneneh</h1><hr class="bg-light">
-        <h3 style="font-size:1.5vw">Faculty of science and engineering </h3>
-        <h3 style="font-size:1.5vw">Bentley campus, Perth</h3>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Anteneh Yeneneh</h1><hr class="bg-light">
+        <h3 style="font-size:1.5vw">Faculty of science and engineering, </h3>
+        <h3 style="font-size:1.5vw">Bentley campus, Perth,</h3>
         <h3 style="font-size:1.5vw">Western Australia, 6845.</h3>
 
       </div>
@@ -53,10 +53,10 @@
     <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
-        <h1 style="font-size:2vw;font-weight:900">Dr. Tushar Kanti Sen</h1><hr class="bg-light">
-        <h3 style="font-size:1.5vw">Adjunct associate professor</h3>
-        <h3 style="font-size:1.5vw">Curtin University</h3>
-        <h3 style="font-size:1.5vw">Faculty of science and engineering</h3>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Tushar Kanti Sen</h1><hr class="bg-light">
+        <h3 style="font-size:1.5vw">Adjunct associate professor,</h3>
+        <h3 style="font-size:1.5vw">Curtin University,</h3>
+        <h3 style="font-size:1.5vw">Faculty of science and engineering,</h3>
        <h3 style="font-size:1.5vw">Bently Campus Gpo  Box U1987, </h3>
        <h3 style="font-size:1.5vw">Perth, Western Australia, 6845.</h3>
 
