--- a/templates/papersub.html
+++ b/templates/papersub.html
@@ -30,7 +30,7 @@
 
     <center>
       
-    <h3 class="text-danger font-weight-bold">Click below to download the Template </h3><br><button class="btn btn-lg btn-primary"><a class="text-white" href="static/IJATEM PAPER TEMPLATE NEW.docx ">DOWNLOAD NOW</a></button>
+    <h3 class="text-danger font-weight-bold">Click below to download the Template </h3><br><button class="btn btn-lg btn-primary"><a class="text-white" href="static/PAPER TEMPLATE.docx ">DOWNLOAD NOW</a></button>
   </center>
   </div>
 
