--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -17,7 +17,8 @@
    {% include 'navbar.html' %}
 
   <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-    <div><h1 style="font-weight:900;" class="text-white text-center">INTERNATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span> </h1></div>
+    <div><h1 style="font-weight:900;word-spacing:8px" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+           data-aos-duration="800">INTERNATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span> </h1></div>
 
   </div>
 
@@ -40,7 +41,7 @@
     <center>
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
-        <img src="static/images/anand.JPG" width="30%" style="border-radius:10px;">
+        <img src="static/images/anand.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
         <br><br>
         <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Anandh Sam Chandra Bose</h1><hr class="bg-light">
         <h3 style="font-size:18px">Assistant Professor,</h3>
