--- a/templates/abstella.html
+++ b/templates/abstella.html
@@ -6,6 +6,7 @@
     <title>ABOUT</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
@@ -16,7 +17,8 @@
         {% include 'navbar.html' %}
 
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="font-weight:900;" class="text-white text-center"><span class="text-danger">ABOUT</span> | COLLEGE</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+                   data-aos-duration="800"><span class="text-danger">ABOUT</span> | COLLEGE</h1></div>
             
         </div>
         
@@ -26,7 +28,8 @@
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
           <div class="row">
             <div class="col-md-8" style="line-height: 200%;">
-              <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT </h1><hr>
+              <h1 class="text-center" style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="zoom-in"  data-aos-easing="linear"
+                data-aos-duration="800">ABOUT </h1><hr>
               <br>
               <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
                 <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">
@@ -76,7 +79,10 @@
   </div>
 
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
