--- a/templates/callforpaper.html
+++ b/templates/callforpaper.html
@@ -6,6 +6,7 @@
     <title>CONFERENCE DETAILS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
@@ -15,12 +16,14 @@
         
         {% include 'navbar.html' %}
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="font-weight:900;" class="text-white text-center">CALL FOR PAPER | <span class="text-danger">CONFERENCE DETAILS</span></h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+                   data-aos-duration="800">CALL FOR PAPER | <span class="text-danger">CONFERENCE DETAILS</span></h1></div>
         </div>
 <br><br><br>
 
 <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-  <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;">CALL FOR PAPERS</h1><hr>
+  <h1 class="text-center text-danger" style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="zoom-in"  data-aos-easing="linear"
+     data-aos-duration="800">CALL FOR PAPERS</h1><hr>
   <br>
   <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Authors and scholars from India and abroad are invited to submit original unpublished research articles relevant to the field of the ICMTEM 2024 conference. ICMTEM 2024 endeavor to publish high quality original research papers, review papers, case studies, and technical notes. All papers in the conference will have to undergo rigorous peer review process.</p>
 </div>
@@ -73,7 +76,10 @@
   </div>
 
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
