--- a/templates/contactus.html
+++ b/templates/contactus.html
@@ -22,7 +22,8 @@
 
             {% include 'navbar.html' %}
             <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-              <div><h1 style="font-weight:900;" class="text-white text-center">CONTACT US </h1></div>
+              <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+                     data-aos-duration="800">CONTACT US </h1></div>
               </div>
   <br><br><br>
   
