--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
   <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
   <style>
  
   h1{
@@ -15,7 +16,7 @@
     text-transform:uppercase;
   }
 
-  .main{
+  /* .main{
     background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/images/home.jpg');
     background-size: cover;
     background-position: center;
@@ -27,7 +28,7 @@
     align-items:center;
     justify-content:center;
     
-  }
+  } */
 </style>
 </head>
 <body>
@@ -38,23 +39,39 @@
 
   
   {% include 'navbar.html' %}
-  <div class="main text-center container-fluid" >
+  <div class="main text-center container-fluid" style=" background-image:linear-gradient(rgba(0,0,0,0.60),rgba(0, 0, 0, 0.60)),url('static/images/home.jpg');
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    color: white;
+    font-weight:900;
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:center;">
    <br><br>
     <div class="container" >
-    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
-    <h2 style="color:rgb(252 181 20);font-weight:900;">DATE: 02 APRIL 2024 | HYBRID MODE</h2><br>
-    <h3 style="font-weight:900;">Organized By</h3><br>
-    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">DEPARTMENT OF ELECTRICAL AND ELECTRONICS ENGINEERING</h2><br>
-    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">STELLA MARY'S COLLEGE OF ENGINEERING</h2><br>
-    <h3 style="font-weight:900;color:rgb(252 181 20);">In Association with</h3><br>
-    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h2><br>
+    <h1 style="text-shadow: 2px 2px 4px #000000;font-weight:900;" data-aos="zoom-in"   data-aos-easing="linear"
+       data-aos-duration="800">International conference on Modern Trends in Engineering and Management (ICMTEM-24)</h1><br>
+    <h2 style="color:rgb(252 181 20);font-weight:900;" data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">DATE: 02 APRIL 2024 | HYBRID MODE</h2><br>
+    <h3 style="font-weight:900;"  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">Organized By</h3><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;"  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">DEPARTMENT OF ELECTRICAL AND ELECTRONICS ENGINEERING</h2><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;"  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">STELLA MARY'S COLLEGE OF ENGINEERING</h2><br>
+    <h3 style="font-weight:900;color:rgb(252 181 20);"  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">In Association with</h3><br>
+    <h2 style="text-shadow: 2px 2px 4px #000000;font-weight:900;"  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800">AB TECHNOLOGIES</h2><br>
       <div class="row">
        <div class="col-md-6">
-        <img src="static/images/STlogo.png"  height="200px" >
+        <img data-aos="zoom-in" data-aos-duration="800" src="static/images/STlogo.png"  height="200px" >
          </div>
       
           <div class="col-md-6">
-        <img src="static/images/ablg.png" height="200px"  >
+        <img data-aos="zoom-in" data-aos-duration="800" src="static/images/ablg.png" height="200px"  >
           </div>
         
       </div>
@@ -64,7 +81,8 @@
   </div>
   <br><br><br>
 <div class="container">
-  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT ICMTEM 2024</h1><hr>
+  <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="fade-right"  data-aos-easing="linear"
+     data-aos-duration="800" >ABOUT ICMTEM 2024</h1><hr>
   <br>
   <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">Recent developments in the fields of science, technology and engineering have contributed to an explosion of innovation in a wide variety of industries, including new product development and manufacturing, design and optimisation techniques, renewable energy, embedded technologies, smart grids,  robotics, structures and construction, big data, remote sensing and geographic information systems. The prestigious "ICMTEM 2024" conference seeks to provide a superior international platform for academics, researchers, engineers, industry participants, and students from all over the world to exchange experiences and research findings.  Energy-effective green technologies are being investigated to provide cost-effective solutions and better outputs across multiple sectors. The purpose of this conference is to explore new technologies and advances in science and engineering for superior engineering solutions by bringing together academics, researchers, and specialists from connected industries in a shared platform. Researchers will use this conference as a forum to showcase the results and discoveries of their work. Participants in this conference are invited from all over the world, including practicing engineers, academicians from various universities and engineering institutes, scientists from R&D institutions, research scholars, and postgraduate students.</p>
 </div>
@@ -72,7 +90,8 @@
 <div class="container">
 <div class="row">
   <div class="col-md-9" style="line-height: 200%;">
-      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">Objectives of the Conference</h1><hr>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="fade-right"  data-aos-easing="linear"
+         data-aos-duration="800">Objectives of the Conference</h1><hr>
       <br>
       <div style="font-size:18px;">
       <p style="text-align: justify;"><b>Knowledge Sharing:</b> ICMTEM-24 aims to facilitate knowledge sharing among academicians, researchers, and experts from related industries. It provides a common forum for exploration of emerging technologies and innovations in engineering and science.</p>
@@ -87,16 +106,19 @@
   <div class="col-md-3" style="padding-top:10px">
     <h5 style="font-weight:900;" class="text-center">IMPORTANT DATES</h5>
     <br>
-    <div class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
+    <div  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800" class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
       <h5  style="font-weight:900">Full Paper Submission:<br><br> 26th March 2024 </h5>
     </div>
     <br>
-    <div class=" bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#780206
+    <div  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800" class="  text-center text-white" style="padding:50px;background-image:linear-gradient(#780206
 ,#780206)">
       <h5  style="font-weight:900">Registration Deadline: <br><br>30th March 2024</h5>
     </div>
     <br>
-    <div class="bg-info text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
+    <div  data-aos="zoom-in"  data-aos-easing="linear"
+       data-aos-duration="800" class=" text-center text-white" style="padding:50px;background-image:linear-gradient(#780206,#780206)">
       <h5 style="font-weight:900">Camera ready paper submission: <br><br>31st March 2024</h5>
     </div>
     
@@ -110,7 +132,8 @@
 <div class="container">
   <div class="row">
     <div class="col-md-8" style="line-height: 200%;">
-      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;">ABOUT COLLEGE</h1><hr>
+      <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" data-aos="fade-right"  data-aos-easing="linear"
+         data-aos-duration="800">ABOUT COLLEGE</h1><hr>
       <br>
       <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">Stella Mary's College of Engineering is founded and overseen by the Nova Educational Trust, under the leadership of Dr. Nazareth Charles, a respected business entrepreneur in Kanyakumari District. Dr. Charles, an Engineer by profession, is renowned for his philanthropic efforts aimed at uplifting the less fortunate, particularly women and the underprivileged members of society. Dedicated to creating skilled professionals with integrity, the institution strives to contribute to the nation and industry.</p>
         <p style="text-align: justify;font-size:18px;line-height: 200%;text-indent:50px">
@@ -120,11 +143,13 @@
     </div>
     <div class="col-md-4 pt-4">
       <div class="h-50">
-        <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
+        <img  data-aos="zoom-in"  data-aos-easing="linear"
+           data-aos-duration="800" src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
       </div> 
       <br>
       <div class="h-50">
-        <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
+        <img  data-aos="zoom-in"  data-aos-easing="linear"
+           data-aos-duration="800" src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
       </div>
     </div>
   </div>
@@ -134,7 +159,8 @@
 
 
           <div class="container">
-            <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;" >ABOUT AB TECHNOLOGIES (IEEE EXPERT CENTRE)</h1><hr>
+            <h1 style="font-weight:900;text-shadow: 2px 2px 4px #000000;"data-aos="fade-right"  data-aos-easing="linear"
+               data-aos-duration="800" >ABOUT AB TECHNOLOGIES (IEEE EXPERT CENTRE)</h1><hr>
             <br>
             <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:100px">AB Technologies (AB Tech) deals with range of services for PhD Research works including Conference, UGC, Scopus and SCI/SCIE, UG/PG Journal works, Thesis & Synopsis Writing and PhD publication. The novel concepts, proposal consultation, statistics, editing and guidance in all stages are provided by professionals who are expertise in PhD related work. As a part of the Research & Training division of AB Technologies, AB Tech support Ph.D. Research Scholars/PG/UG Students in their Research areas/ Projects/Publications in all major domains.
             </p>            
@@ -174,7 +200,10 @@
   </div>
 
   </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
