--- a/templates/journals.html
+++ b/templates/journals.html
@@ -6,6 +6,7 @@
     <title>JOURNALS</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body style="background-color: #e9ecef;">
     <div class="mt-3">
@@ -16,16 +17,19 @@
         {% include 'navbar.html' %}
 
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;" >
-            <div><h1 style="font-weight:900;" class="text-white text-center">JOURNALS</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+                   data-aos-duration="800">JOURNALS</h1></div>
             
         </div>
         
         <br><br><br>
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded ">
-            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Proceedings & Publications</h2>
+            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center" data-aos="zoom-in" data-aos-easing="linear"
+               data-aos-duration="800">Proceedings & Publications</h2>
             <p style="text-align: justify;font-size:18px;text-indent:50px;padding:20px;line-height: 200%">International Conference on Modern Trends in Engineering and Management (ICMTEM-24) proceedings series will be submitted to the journal of International Journal of Advanced Trends in Engineering and Management (IJATEM) and International Journal for Modern Trends in Science and Technology (IJMTST) for evaluation and indexing.</p>
-            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Publication opportunities</h2>
+            <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center" data-aos="zoom-in" data-aos-easing="linear"
+               data-aos-duration="800">Publication opportunities</h2>
             <p style="text-align: justify;font-size:18px;text-indent:50px;padding:20px;line-height: 200%">Submissions of papers to be reviewed by the “International Conference on Modern Trends in Engineering and Management (ICMTEM-24)” review committee will be suggested for publication in one of the following journals:</p>
             
             
@@ -33,7 +37,8 @@
         </div>
 
         <div class="container bg-light p-5 shadow p-3 mb-5  rounded">
-          <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center">Publications in Journals</h2>
+          <h2 style="font-weight:900;text-transform:uppercase" class="text-danger text-center" data-aos="zoom-in" data-aos-easing="linear"
+             data-aos-duration="800">Publications in Journals</h2>
           <br><br>
           <div >
             <center>
@@ -47,14 +52,14 @@
             </center>
             </div>
 
-          </div>
+</div>
           
          
             
 
 
 
-        <div class="container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px; font-size:18px;line-height:200%;">
+   <div class="container bg-light p-5 shadow p-3 mb-5  rounded" style="padding: 40px; font-size:18px;line-height:200%;">
             <h2 style="font-weight: 900;">The following are the main processes in publishing a research paper, from manuscript preparation to publication:</h2><br>
         <p style="text-align: justify; line-height:200%;"><span class="text-danger" style="font-weight: 900;">Perform Research:</span> Have original research work of current interest. High-quality research should be the primary focus of scholars in order to promote area advancement. Finding the current issues facing the field will be made easier with the aid of a thorough literature review.</p>
         <br>
@@ -73,7 +78,8 @@
 <br><br>
 
 <div class="container bg-light p-5 shadow p-3 mb-5  rounded" >
-    <h2 style="font-weight: 900;text-transform:uppercase" class="text-danger text-center">Publication malpractice and ethics</h2><br><br>
+    <h2 style="font-weight: 900;text-transform:uppercase" class="text-danger text-center" data-aos="zoom-in" data-aos-easing="linear"
+       data-aos-duration="800">Publication malpractice and ethics</h2><br><br>
     <h3 style="font-weight: 900;">Authors' duties</h3><br>
     <h3 style="font-weight: 900;" class="text-danger">Reporting standards</h3><br>
     <p style="text-align: justify;font-size: 18px;text-indent:50px;line-height:200%;">Original research report authors should to include a factual description of the work done together with an objective assessment of its importance. The paper should accurately present the underlying data. A paper should have enough information and citations so that other people may do the same research. It is unethical and unprofessional to make false or intentionally erroneous statements.</p>
@@ -119,7 +125,10 @@
 </div>
 
 </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 </body>
 <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
