--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -6,6 +6,7 @@
     <title>COMMITTEE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body style="background-color: #e9ecef;">
   <div class="mt-3">
@@ -14,7 +15,8 @@
    {% include 'navbar.html' %}
 
   <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-    <div><h1 style="font-weight:900;" class="text-white text-center">NATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span></h1></div>
+    <div><h1 style="font-weight:900;word-spacing:8px" class="text-white text-center" data-aos="zoom-in" data-aos-easing="linear"
+            data-aos-duration="800">NATIONAL ADVISORY | <span class="text-danger">COMMITTEE</span></h1></div>
 
   </div>
 
@@ -24,7 +26,7 @@
   <center>
   <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
   ,#0083b0);">
-    <img src="static/images/murali.JPG" width="200px" style="border-radius:10px">
+    <img src="static/images/murali.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
     <br><br>
     <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Murali Matcha</h1><hr class="bg-light">
     <h3 style="font-size:18px">Associate Professor, </h3>
@@ -39,15 +41,26 @@
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
        
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. J.A.SMITHA</h1><hr class="bg-light">
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. J.A.Smitha</h1><hr class="bg-light">
         <h3 style="font-size:18px">HOD and Professor, </h3>
         <h3 style="font-size:18px">Department of Computer Science and Engineering,</h3>
         <h3 style="font-size:18px">Sri Sairam College of Engineering,</h3>
-        <h3 style="font-size:18px">Anekal, Bangalure.</h3>
+        <h3 style="font-size:18px">Anekal, Bangalore.</h3>
       </div>
       </center>
 
     <br><br>
+
+    <center>
+      <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      ,#0083b0);">
+
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. K. Saravanan</h1><hr class="bg-light">
+        <h3 style="font-size:18px">Associate Professor, </h3>
+        <h3 style="font-size:18px">SRM Institute of Science and Technology, </h3>
+        <h3 style="font-size:18px">Chennai.</h3>
+      </div>
+      </center>
 
     <!-- <center>
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
@@ -94,7 +107,10 @@
     </div>
 
     </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
   </body>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
