--- a/templates/orgcommittee.html
+++ b/templates/orgcommittee.html
@@ -18,16 +18,19 @@
         {% include 'navbar.html' %}
 
         <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-            <div><h1 style="font-weight:900;" class="text-white text-center">ORGANIZING | <span class="text-danger">COMMITTEE</span></h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in" data-aos-easing="linear"
+                    data-aos-duration="800">ORGANIZING | <span class="text-danger">COMMITTEE</span></h1></div>
 
         </div>
 
         <br><br><br>
-  <h1 class="text-center" style="text-shadow: 2px 2px 4px #111111;font-weight:900;text-transform:uppercase">Stella Mary's College of Engineering</h1>
+  <h1 class="text-center" style="text-shadow: 2px 2px 4px #111111;font-weight:900;text-transform:uppercase" data-aos="zoom-in" data-aos-easing="linear"
+     data-aos-duration="800">Stella Mary's College of Engineering</h1>
   <br><br>
   
   <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CONVENER</h1><hr class="bg-dark">
+    <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+       data-aos-duration="800">CONVENER</h1><hr class="bg-dark">
     <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
        <div data-aos="flip-up" class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
            <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. A. R. Gayathri</h1><hr class="bg-light">
@@ -43,7 +46,8 @@
 
   
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENERS</h1><hr class="bg-dark">
+    <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+       data-aos-duration="800">CO-CONVENERS</h1><hr class="bg-dark">
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
             <div data-aos="flip-right" class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. R. K. Madhumathi</h1><hr class="bg-light">
@@ -81,7 +85,8 @@
 
     <br><br><br>
 <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-    <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr class="bg-dark">
+    <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+       data-aos-duration="800">CO-ORDINATORS</h1><hr class="bg-dark">
         <div style="display: flex;flex-wrap:wrap;justify-content:space-around;" class="text-white">
             <div data-aos="flip-right" class="shadow p-3 mb-5  rounded  mt-5" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
                 <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. K. Ezhil Vignesh</h1><hr class="bg-light">
@@ -130,10 +135,12 @@
 
     <br><br><br><br>
 
-  <h1 class="text-center" style="text-shadow: 2px 2px 4px #000000;font-weight:900;">AB TECHNOLOGIES</h1>
+  <h1 class="text-center" style="text-shadow: 2px 2px 4px #000000;font-weight:900;" data-aos="zoom-in" data-aos-easing="linear"
+     data-aos-duration="800">AB TECHNOLOGIES</h1>
   <br><br>
   <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CONVENERS</h1><hr class="bg-dark">
+      <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+         data-aos-duration="800">CONVENERS</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div data-aos="flip-right" class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Mr. K.S. Kavin </h1><hr class="bg-light">
@@ -153,7 +160,8 @@
 
    <br><br><br>
     <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CO-CONVENER</h1><hr class="bg-dark">
+      <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+         data-aos-duration="800">CO-CONVENER</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div data-aos="flip-up" class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Ms. R. Sivanagini </h1><hr class="bg-light">
@@ -166,7 +174,8 @@
 
   <br><br><br>
     <div class="container text-center jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
-      <h1 class="text-center text-danger" style="font-weight:900">CO-ORDINATORS</h1><hr class="bg-dark">
+      <h1 class="text-center text-danger" style="font-weight:900" data-aos="zoom-in" data-aos-easing="linear"
+         data-aos-duration="800">CO-ORDINATORS</h1><hr class="bg-dark">
       <div style="display: flex;flex-wrap:wrap;justify-content:space-around;">
          <div data-aos="flip-right" class="shadow p-3 mb-5 bg-light rounded mt-5 text-white" style="width:500px;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db,#0083b0)">
              <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Ms. R. Ramya </h1><hr class="bg-light">
