--- a/templates/registration.html
+++ b/templates/registration.html
@@ -6,6 +6,7 @@
     <title>REGISTRATION</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body>
     <div class="mt-3">
@@ -16,7 +17,8 @@
         {% include 'navbar.html' %}
 
         <div style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-            <div><h1 style="font-weight:900;" class="text-white text-center">REGISTRATION GUIDELINES</h1></div>
+            <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+                    data-aos-duration="800">REGISTRATION GUIDELINES</h1></div>
             
         </div>
 
@@ -24,7 +26,8 @@
         <br><br><br>
 
             <div class="container" style="padding:30px">
-                <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase">Conference Registration</h1><br>
+                <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase" data-aos="zoom-in"  data-aos-easing="linear"
+                   data-aos-duration="800">Conference Registration</h1><br>
                 <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
             </div>
 
@@ -58,7 +61,8 @@
 <br><br>
   <center>
             <div class="w-50">
-                <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase">BANK DETAILS</h1>
+                <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase" data-aos="zoom-in"  data-aos-easing="linear"
+                   data-aos-duration="800">BANK DETAILS</h1>
               <br>
                 <table class="table table-bordered ">
                     <tr>
@@ -96,7 +100,8 @@
         <br><br><br>
 
         <div class="container" style="padding:30px">
-            <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase">PARTICIPATION DETAILS</h1><br><br>
+            <h1 class="text-center text-danger" style="font-weight:900;text-transform:uppercase" data-aos="zoom-in"  data-aos-easing="linear"
+               data-aos-duration="800">PARTICIPATION DETAILS</h1><br><br>
           <h3 style="font-weight:900;" class="text-danger">Corresponding Author</h3><br>
             <p style="text-align: justify;line-height: 200%;font-size:18px;text-indent:50px">For a paper to be included in the proceedings and scheduled for presentation, at least one of the authors must be a registered participant in the conference. Members who wish to participate may register for the fees listed below. Once the payment is completed send the screenshot of the receipt to icmtem2024@gmail.com</p>
 
@@ -141,7 +146,10 @@
   </div>
 
   </div>
-         
+         <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+         <script>
+           AOS.init();
+         </script>
 
 </body>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
