--- a/templates/sccommittee.html
+++ b/templates/sccommittee.html
@@ -6,6 +6,7 @@
     <title>COMMITTEE</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css" integrity="sha384-xOolHFLEh07PJGoPkLv1IbcEPTNtaed2xpHsD9ESMhqIYd0nLMwNLD69Npy4HI+N" crossorigin="anonymous">
     <link rel="stylesheet" href="static/style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.css">
 </head>
 <body style="background-color: #e9ecef;">
   <div class="mt-3">
@@ -14,7 +15,8 @@
    {% include 'navbar.html' %}
 
   <div  style="height: 60vh;display:flex;justify-content:center;align-items:center;background-image:linear-gradient(rgba(0,0,0,0.40),rgba(0, 0, 0, 0.40)),url('static/images/3im.jpg');background-size: cover;background-position:center;width:100%;">
-    <div><h1 style="font-weight:900;" class="text-white text-center">SCIENTIFIC | <span class="text-danger">COMMITTEE</span></h1></div>
+    <div><h1 style="font-weight:900;" class="text-white text-center" data-aos="zoom-in"  data-aos-easing="linear"
+            data-aos-duration="800">SCIENTIFIC | <span class="text-danger">COMMITTEE</span></h1></div>
 
   </div>
 
@@ -96,7 +98,10 @@
       </div>
 
       </div>
-
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.3.4/aos.js"></script>
+  <script>
+    AOS.init();
+  </script>
 
 </body>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
