--- a/templates/abstella.html
+++ b/templates/abstella.html
@@ -39,10 +39,12 @@
             </div>
             <div class="col-md-4 pt-4">
               <div class="h-50">
-                <img src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
+                <img data-aos="zoom-in"  data-aos-easing="linear"
+                  data-aos-duration="800" src="static/images/CLG IMAGE 2.jpg" style="object-fit:cover;width:100%;height:100%">
               </div> 
               <div class="h-50">
-                <img src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
+                <img data-aos="zoom-in"  data-aos-easing="linear"
+                  data-aos-duration="800" src="static/images/CLG IMAGE 1.jpg" style="object-fit:cover;width:100%;height:100%">
               </div>
             </div>
           </div>
