--- a/templates/chiefguests.html
+++ b/templates/chiefguests.html
@@ -23,12 +23,13 @@
 
         <br><br><br>
 
-   <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+   <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded text-white" >
     <center>
-    <div  style="width:70%;box-sizing:border-box;padding:10px;">
+    <div  style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      ,#0083b0);">
       <img class="img-fluid" src="static/images/Joshi.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
-      <h1 style="font-size:20px;font-weight:900">Dr. Joshi Manohar</h1><hr class="bg-light">
+      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. JOSHI MANOHAR</h1><hr class="bg-light">
       <h3 style="font-size:18px">Dean & HOD, </h3>
       <h3 style="font-size:18px">Presidency University,</h3>
       <h3 style="font-size:18px">Bangalore.</h3>
@@ -38,12 +39,13 @@
    </div>
       <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded text-white" >
     <center>
-    <div  style="width:70%;box-sizing:border-box;padding:10px;">
+    <div  style="width:70%;box-sizing:border-box;padding:10px; background-image:linear-gradient(to left,#00b4db
+      ,#0083b0);">
       <img class="img-fluid" src="static/images/Lekshmi.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
-      <h1 style="font-size:20px;font-weight:900">Dr. Lekshmi</h1><hr class="bg-light">
+      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. LEKSHMI</h1><hr class="bg-light">
       <h3 style="font-size:18px">Dean, </h3>
       <h3 style="font-size:18px">R&D Department,</h3>
       <h3 style="font-size:18px">Associate Professor,</h3>
@@ -55,12 +57,14 @@
    </div>
   <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded text-white" >
     <center>
-    <div  style="width:70%;box-sizing:border-box;padding:10px;">
-      <img class="img-fluid" src="static/images/Dr.B.Vaikundaselvan.jpg" width="40%" height="300px" style="border-radius:10px;">
+    <div  style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      ,#0083b0);">
+      <img class="img-fluid" src="static/images/Dr.B.Vaikundaselvan.jpg" width="40%" height="300px" style="border-radius:10px;background-image:linear-gradient(to left,#00b4db
+        ,#0083b0);">
       <br><br>
-      <h1 style="font-size:20px;font-weight:900">Dr. Vaikunda Selvan</h1><hr class="bg-light">
+      <h1 style="font-size:20px;font-weight:900; text-shadow: 2px 2px 4px #000000;">Dr. VAIKUNDA SELVAN </h1><hr class="bg-light">
       <h3 style="font-size:18px">Dean,</h3>
       <h3 style="font-size:18px">R&D Department,</h3>
       <h3 style="font-size:18px">Nehru Group of Institutions,</h3>
@@ -72,12 +76,13 @@
    </div>
   <br><br><br>
 
-  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded" >
+  <div class="container jumbotron p-5 shadow p-3 mb-5 bg-light rounded text-white" >
     <center>
-    <div  style="width:70%;box-sizing:border-box;padding:10px;">
+    <div  style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
+      ,#0083b0); ">
       <img class="img-fluid" src="static/images/Dr. D. SAM HARISON.jpg" width="40%" height="300px" style="border-radius:10px;">
       <br><br>
-      <h1 style="font-size:20px;font-weight:900">Dr. Sam Harison</h1><hr class="bg-light">
+      <h1 style="font-size:20px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. SAM HARISON</h1><hr class="bg-light">
       <h3 style="font-size:18px">HOD/EEE, </h3>
       <h3 style="font-size:18px">Rohini College of Engineering,</h3>
       
