--- a/templates/intcommittee.html
+++ b/templates/intcommittee.html
@@ -30,7 +30,7 @@
   ,#0083b0);">
     <img src="static/images/thomas.JPG" width="30%" height="300px" class="img-fluid" style="border-radius:10px">
     <br><br>
-    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. T. J. Thomas Thangam</h1><hr class="bg-light">
+    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. T. J. THOMAS THANGAM</h1><hr class="bg-light">
     <h3 style="font-size:18px">Department of Process Engineering, </h3>
     <h3 style="font-size:18px">International Maritime  College Oman,</h3>
     <h3 style="font-size:18px">National University of Science and Technology,</h3>
@@ -43,7 +43,7 @@
       ,#0083b0);">
         <img src="static/images/anand.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
         <br><br>
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Anandh Sam Chandra Bose</h1><hr class="bg-light">
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">ANANDH SAM CHANDRA BOSE</h1><hr class="bg-light">
         <h3 style="font-size:18px">Assistant Professor,</h3>
         <h3 style="font-size:18px">Faculty of Applied Medical Science,</h3>
         <h3 style="font-size:18px">AlMaarefa University,</h3>
