--- a/templates/nacommittee.html
+++ b/templates/nacommittee.html
@@ -28,7 +28,7 @@
   ,#0083b0);">
     <img src="static/images/murali.JPG" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
     <br><br>
-    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. M . Murali Matcha</h1><hr class="bg-light">
+    <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. M . MURALI MATCHA</h1><hr class="bg-light">
     <h3 style="font-size:18px">Associate Professor, </h3>
     <h3 style="font-size:18px">Department of Electrical Engineering,</h3>
     <h3 style="font-size:18px">Medicaps University,</h3>
@@ -40,8 +40,9 @@
     <center>
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
-       
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. J.A.Smitha</h1><hr class="bg-light">
+        <img src="static/images/smitha.jpg" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
+        <br><br>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. J.A.SMITHA</h1><hr class="bg-light">
         <h3 style="font-size:18px">HOD and Professor, </h3>
         <h3 style="font-size:18px">Department of Computer Science and Engineering,</h3>
         <h3 style="font-size:18px">Sri Sairam College of Engineering,</h3>
@@ -54,8 +55,9 @@
     <center>
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
-
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. K. Saravanan</h1><hr class="bg-light">
+        <img src="static/images/saravanan.jpg" class="img-fluid" width="30%" height="300px" style="border-radius:10px;">
+        <br><br>
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. K. SARAVANAN</h1><hr class="bg-light">
         <h3 style="font-size:18px">Associate Professor, </h3>
         <h3 style="font-size:18px">SRM Institute of Science and Technology, </h3>
         <h3 style="font-size:18px">Chennai.</h3>
