--- a/templates/sccommittee.html
+++ b/templates/sccommittee.html
@@ -28,7 +28,7 @@
       <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
         ,#0083b0);">
 
-          <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Shekaina Justin</h1><hr class="bg-light">
+          <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr.  SHEKAINA JUSTIN </h1><hr class="bg-light">
           <h3 style="font-size:1.5vw">Associate Professor, </h3>
           <h3 style="font-size:1.5vw">Princess Nourah bint Abdulrahman University,</h3>
           <h3 style="font-size:1.5vw">Saudi Arabia.</h3>
@@ -42,7 +42,7 @@
     <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Anteneh Yeneneh</h1><hr class="bg-light">
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr.  ANTENEH YENENEH</h1><hr class="bg-light">
         <h3 style="font-size:1.5vw">Faculty of science and engineering, </h3>
         <h3 style="font-size:1.5vw">Bentley campus, Perth,</h3>
         <h3 style="font-size:1.5vw">Western Australia, 6845.</h3>
@@ -55,7 +55,7 @@
     <div class=" text-white" style="width:70%;box-sizing:border-box;padding:10px;background-image:linear-gradient(to left,#00b4db
       ,#0083b0);">
 
-        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. Tushar Kanti Sen</h1><hr class="bg-light">
+        <h1 style="font-size:26px;font-weight:900;text-shadow: 2px 2px 4px #000000;">Dr. TUSHAR KANTI SEN</h1><hr class="bg-light">
         <h3 style="font-size:1.5vw">Adjunct associate professor,</h3>
         <h3 style="font-size:1.5vw">Curtin University,</h3>
         <h3 style="font-size:1.5vw">Faculty of science and engineering,</h3>
